Fix broken CSS for edit comment modal component.

--- a/app/src/app/chat-room/edit-chat-message/edit-chat-message.component.css
+++ b/app/src/app/chat-room/edit-chat-message/edit-chat-message.component.css
@@ -8,7 +8,7 @@
   z-index: 50;
 }
 
-.admin-options-box {
+.edit-box {
   position: fixed;
   border-radius: 10px;
   top: 30vh;
